adicionando projeto e habilidade

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
                     <code>Javascript</code>
                     <img src="javascript-1.svg" alt="javascript" title="javascript">
                 </div>
+                <div class="div-habilidades">
+                    <code>React.js</code>
+                    <img src="icons8-reagir-150.svg" alt="html" title="React.js">
+                </div>
             </div>
         </section>
 
@@ -65,7 +69,7 @@
             <a name="projetos"></a>
             <h2>Projetos</h2>
             <div class="container-projetos">
-            <div class="container-box">
+                <div class="container-box">
                     <div class="box-projetos">
                         <a href="https://tiagopsouza.github.io/blogDeTech/index.html" target="_blank">
                             <img src="blogtech.png" alt="projeto de um blog sobre tecnologia">
@@ -75,11 +79,17 @@
                         <a href="https://tiagopsouza.github.io/blogDeTech/index.html" target="_blank"><p><span>blogDeTech: </span> Um blog de tecnologia desenvolvido em HTML, CSS e Javascript.</p>
                     </a>
                     </div>
-            </div>
+                </div>
             
                 <div class="container-box">
                     <div class="box-projetos">
-                        <p>Um novo Projeto <span>Em Breve!</span></p>
+                        <a href="https://tiagopsouza.github.io/proverbio_do_dia/" target="_blank">
+                            <img src="proverbio_do_dia.png" alt="projeto provérbio do dia, leia um novo provérbio a cada dia.">
+                        </a>
+                    </div>
+                    <div class="container-box-content">
+                        <a href="https://tiagopsouza.github.io/proverbio_do_dia/" target="_blank"><p><span>Provérbio do dia: </span> Projeto provérbio do dia, um novo provérbio a cada dia. Projeto desenvolvido em React.js</p>
+                    </a>
                     </div>
                 </div>
                 
